= 2.5.0-rc.1 =

- Tweak: Reduced sling aiming difficulty
- Tweak: Silver/gold arrows, spears, and ruined spears buffed to iron level stats to be consistent with other weapons
- Fixed: Broken first person bow animations
- Fixed: Thrown stones much faster than intended
- Fixed: Unable to knap throwable stones
- Fixed: Player model twitching in 3rd person when aiming with bow or sling
- Fixed: Rare crash caused by config loading in too late
- API: Renamed GetProjectileSpeed method to GetProjectileVelocity
- API: Projectile types can now be part of mutliple ammo categories, with separate damage values
- Other: Breaking change for developers, VINTAGE_STORY_DATA environment variable renamed to VINTAGE_STORY_DEV_DATA
- Other: Replaced spaces with underscores in mod filenames
- Other: Removed unfinished code for 3rd person item animations

= 2.5.0-pre.2 =

- New: Reticle size is now scaled with the rest of the GUI
--- Can be switched off by chat command `.bullseye set reticlescaling off`
- New: Thrown stones and beenades now use Bullseye aiming
- Tweak: Thrown stones, sling stones, and beenades now affected by class damage and velocity traits
- Tweak: Higher reticle sway when reticle is yellow
- Fixed: Spears don't break when thrown with 1 durability left
- Fixed: Incorrect break chance display for sling stones
- API: All item code migrated to CollectibleBehaviors
--- All BullseyeItem classes are now marked obsolete and preserved for compatibility with older mods
--- Legacy classes no longer support advanced features like ammo selection
- Other: JSON files are now correctly marked as JSON with Comments (JSON-C) in the VS Code workspace

= 2.5.0-pre.1 =

- New: Experimental 'static' aiming style
--- Switch on by chat command `.bullseye set aimstyle fixed` (use `.bullseye set aimstyle free` to switch back) 
- Tweak: Smoother reticle movement when beginning a shot
- Fixed: Crash when trying to shoot a bow with no arrows
- Regression: Temporarily disabled broken bow animations